--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -48,6 +48,7 @@
     <string name="menu_sucursales">Sucursales</string>
     <string name="menu_registrarse">Registrarse</string>
     <string name="menu_inicial_session">Iniciar Sesión</string>
+    <string name="menu_cerrar_session">Cerrar Sesión</string>
 
 
     <string name="text_wellcome">Bienvenido(a)</string>
